--- a/src/app/admin/tariff-list/tariff-list.component.html
+++ b/src/app/admin/tariff-list/tariff-list.component.html
@@ -15,5 +15,5 @@
     </tbody>
 </table>
 <div class="p-3 my-2">
-    <adm-tariff-form (reloadPeriodList)='reloadTariffList()' [periodId]="periodId"></adm-tariff-form>
+    <adm-tariff-form (reloadTariffList)='reloadTariffList()' [periodId]="periodId"></adm-tariff-form>
 </div>
