--- a/src/app/admin/event-details/event-details.component.html
+++ b/src/app/admin/event-details/event-details.component.html
@@ -1,16 +1,18 @@
 <div class="border p-3 my-2">
     <div class="p-3 my-2">
         <div class="float-right">
-            <button class="btn btn-md btn-outline-primary" (click)="back()" >Back</button>
+            <button class="btn btn-md btn-outline-primary" (click)="back()">Back</button>
         </div>
     </div>
-    <div class="p-3">
-        <div class="display-4 row">
-            {{event.name}}
+    <div *ngIf="event">
+        <div class="p-3">
+            <div class="display-4 row">
+                {{event.name}}
+            </div>
+            <div class="display-6 row">
+                {{event.startDate}} - {{event.endDate}}
+            </div>
         </div>
-        <div class="display-6 row">
-            {{event.startDate}} - {{event.endDate}}
-        </div>
+        <adm-period-list [eventId]="event.id"></adm-period-list>
     </div>
-    <adm-period-list [eventId]="event.id"></adm-period-list>
 </div>
