--- a/src/app/admin/period-details/period-details.component.html
+++ b/src/app/admin/period-details/period-details.component.html
@@ -4,7 +4,7 @@
             <button class="btn btn-md btn-outline-primary" (click)="back()">Back</button>
         </div>
     </div>
-    <div>
+    <div *ngIf="period">
         <div class="p-3">
             <div class="display-4 row">
                 {{period.name}}
